...
        android:id="@+id/splashFragment"
        android:name="com.seif.booksislandapp.presentation.intro.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_viewPagerFragment"
            app:destination="@id/viewPagerFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_introFragment"
            app:destination="@id/introFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.seif.booksislandapp.presentation.intro.authentication.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
...
