...
    <string name="onboarding_text_1">Used And New Books With Great Prices</string>
    <string name="onboarding_text_2">More Than 20 Books Categories In One Place</string>
    <string name="onboarding_text_3">Sell, Donate, Exchange &amp; Bid Your Books With Us</string>
    <string name="next">Next</string>
    <string name="onboarding_image">onBoardingImage</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>

    <!--splash screen-->
    <string name="loading">loading..</string>

    <!--fragment_intro-->
    <string name="login">Login</string>
...
